crates/solidity/testing/snapshots/bindings_output/using/elementary/generated/0.8.4-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or BytesKeyword or ContractKeyword or EnumKeyword or ErrorKeyword or FixedKeyword or FunctionKeyword or Identifier or ImportKeyword or IntKeyword or InterfaceKeyword or LibraryKeyword or MappingKeyword or PragmaKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword.
   ╭─[input.sol:3:1]
   │
 3 │ ╭─▶ using {square} for int;
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ function square(int value) returns (int) {}
   │          ───┬──     ──┬──  
   │             ╰────────────── name: 1
   │                       │    
   │                       ╰──── name: 2
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ function square(int value) returns (int) {}
   │ ────────────────────┬─┬─────────────────────  
   │                     ╰───────────────────────── definiens: 2
   │                       │                       
   │                       ╰─────────────────────── definiens: 1
───╯
